# wzry-search-mcp

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md  config.example.toml
.github/workflows/: ci.yml  release.yml  source-smoke.yml
docs/: AGENTS.md  architecture.md  coverage-matrix.md  development.md  hermes-mcp.md  release-artifacts.md  tools.md  update-detection.md
docs/acceptance-cases/: 00_local_fact_queries.md  01_source_sync.md  02_news_incremental_sync.md  03_mcp_stdio_protocol.md  04_release_artifacts.md
docs/adr/: 0001-local-fact-store.md  0002-rmcp-structured-output.md
docs/features/: 00_agent_usage.md  01_source_sync_and_updates.md  02_news_incremental_sync.md
docs/overview/: docs-as-code-projection.md
docs/plan/: 00_scope.md  01_data_model.md  02_source_sync.md  03_mcp_contract.md  04_error_semantics.md  05_release_deployment.md  06_news_incremental_sync.md
docs/registry/: tool-contracts.md
docs/tasks/: v0.2.x-docs-hardening.md
schemas/: hero-profile.schema.json
src/: crawler.rs  db.rs  export.rs  main.rs  mcp.rs  model.rs  parser.rs  util.rs
src/db/: query.rs  rows.rs  schema.rs  tests.rs  write.rs
tests/: mcp_stdio.rs
