[package]
name = "wzry-search-mcp"
version = "0.2.0"
edition = "2024"
description = "Source-aware local MCP server for 王者荣耀 hero profiles, skills, items, summoner skills, and lineup evidence retrieval."
license = "MIT"
repository = "https://github.com/Develata/wzry-search-mcp"
readme = "README.md"
keywords = ["mcp", "wzry", "honor-of-kings", "sqlite", "game-data"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
encoding_rs = "0.8"
html2text = "0.15"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "gzip", "brotli", "deflate", "json"] }
rmcp = { version = "1.7", features = ["server", "macros", "schemars", "transport-io"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
scraper = "0.24"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
